# smart-city-bq-video-analysis-service-2

./: .gitignore  README.md  main.py  pyproject.toml  run.py  sequential_inference.py  test_sequential.py  utils.py  verify_changes.py  verify_structure.py
.gemini/commands/: bmad-bmm-check-implementation-readiness.toml  bmad-bmm-code-review.toml  bmad-bmm-correct-course.toml  bmad-bmm-create-architecture.toml  bmad-bmm-create-epics-and-stories.toml  bmad-bmm-create-prd.toml  bmad-bmm-create-product-brief.toml  bmad-bmm-create-story.toml  bmad-bmm-create-ux-design.toml  bmad-bmm-dev-story.toml  bmad-bmm-document-project.toml  bmad-bmm-domain-research.toml  bmad-bmm-edit-prd.toml  bmad-bmm-generate-project-context.toml  bmad-bmm-market-research.toml  bmad-bmm-qa-generate-e2e-tests.toml  bmad-bmm-quick-dev.toml  bmad-bmm-quick-spec.toml  bmad-bmm-retrospective.toml  bmad-bmm-sprint-planning.toml  bmad-bmm-sprint-status.toml  bmad-bmm-technical-research.toml  bmad-bmm-validate-prd.toml  bmad-brainstorming.toml  bmad-party-mode.toml
_bmad-output/: project-context.md
_bmad-output/planning-artifacts/: product-brief-video-analysis-service-2.0-2026-02-25.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: config.yaml
services/: exporter.py  reporter.py
video_analysis/: config.py  main.py
video_analysis/core/: __init__.py  inference.py
video_analysis/services/: api.py  notification.py  time.py
video_analysis/utils/: __init__.py  detailed_vision.py  geometry.py  (+1 more)
(+4 files in other folders)
