[project]
name = "video-analysis-service-2-0"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "huggingface-hub[cli]>=1.3.5",
    "opencv-python>=4.13.0.90",
    "ultralytics>=8.4.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]
